# duck-tape

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/duck_tape/: main.py
src/duck_tape/commands/: backups.py  code.py  hello.py  nas.py
src/duck_tape/commands/backup_commands/: all.py  databases.py  notes.py
src/duck_tape/commands/nas_commands/: all.py  notes.py
src/duck_tape/commands/project_commands/: common.py  create.py  data_pulse.py  eight_bit_backend.py  eight_bit_discord_bot.py  web_portfolio.py
src/duck_tape/tools/: logo.py
src/duck_tape/tools/browser/: open.py
src/duck_tape/tools/dev_tools/: tools.py
src/duck_tape/tools/discord/: discord.py
src/duck_tape/tools/docker/: deploy.py
src/duck_tape/tools/git/: checkout_to_main.py  git_pull.py  pull_changes.py
src/duck_tape/tools/ide/: code.py
src/duck_tape/tools/linux/: create_executable.py
src/duck_tape/tools/music/: spotify.py
src/duck_tape/tools/nas/: check_space.py
