[project]
name = "duck-tape"
version = "0.1.0"
description = "Script Project for personal development"
authors = [
    {name = "Ian Maze",email = "mazeiandev@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer (>=0.26.8,<0.27.0)",
    "rich (>=15.0.0,<16.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]

[project.scripts]
duck-tape = "duck_tape.main:app"

[tool.poetry]
packages = [{include = "duck_tape", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.6.0,<5.0.0)"
]
